# real4cpd

./: LICENSE  README.md  condaenv.yml  pyproject.toml  training_script.py
conf/: config.yaml
mango/: __init__.py  metatuner.py  scheduler.py  tuner.py
mango/domain/: distribution.py  domain_space.py  parameter_sampler.py
mango/optimizer/: base_predictor.py  bayesian_learning.py
segmentation/: environment.py  learners.py  model.py  optutils.py  profiles.py  segmenters.py  utils.py
